flux/infrastructure/base/istio/resources.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: hydrahmlb-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: hydrahmlb-tls
      hosts:
        - "*.hydrahmlb.cc"
        - "hydrahmlb.cc"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.hydrahmlb.cc"
        - "hydrahmlb.cc"
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: marten-traefik
  namespace: istio-ingress
spec:
  hosts:
    - marten.traefik.local
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: STATIC
  endpoints:
    - address: 192.168.2.40
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: marten-fallback
  namespace: istio-ingress
spec:
  host: marten.traefik.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 80
        tls:
          mode: DISABLE
      - port:
          number: 443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: marten-fallback
  namespace: istio-ingress
spec:
  hosts:
    - "*.hydrahmlb.cc"
  gateways:
    - istio-ingress/hydrahmlb-gateway
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: marten.traefik.local
            port:
              number: 80
    - route:
        - destination:
            host: marten.traefik.local
            port:
              number: 443
